--- a/app/src/main/res/layout/activity_coursera.xml
+++ b/app/src/main/res/layout/activity_coursera.xml
@@ -6,61 +6,77 @@
 
     <include layout="@layout/toolbar" />
 
-    <ScrollView
+    <LinearLayout
+        android:id="@+id/info_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical">
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/bg_avatar"
+            android:padding="1dp"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+    <TextView
+        android:id="@+id/code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left" />
 
-                <TextView
-                    android:id="@+id/coursera_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="10课时" />
+    <TextView
+        android:id="@+id/remark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="12dp"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left" />
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1.0"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical">
+    <TextView
+        android:id="@+id/createTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="12dp"
+        />
 
-                    <ImageView
-                        android:id="@+id/coursera_cover"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_avatar_default" />
+    <TextView
+        android:id="@+id/doctor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="12dp" />
 
-                    <TextView
-                        android:id="@+id/coursera_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="10课时" />
+    <TextView
+        android:id="@+id/desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="12dp" />
 
-                </LinearLayout>
+    <TextView
+        android:id="@+id/updateTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="12dp"
+        />
 
-                <TextView
-                    android:id="@+id/audience_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="10课时" />
-            </LinearLayout>
-
-            <include layout="@layout/common_list_view" />
-
-        </LinearLayout>
-
-    </ScrollView>
 </LinearLayout>
