--- a/app/src/main/res/layout/activity_coursera.xml
+++ b/app/src/main/res/layout/activity_coursera.xml
@@ -26,6 +26,7 @@
 
     <TextView
         android:id="@+id/code"
+        android:padding="@dimen/sixteen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
@@ -34,6 +35,7 @@
 
     <TextView
         android:id="@+id/remark"
+        android:padding="@dimen/sixteen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -43,6 +45,7 @@
 
     <TextView
         android:id="@+id/createTime"
+        android:padding="@dimen/sixteen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/w_sixteen"
@@ -53,6 +56,7 @@
 
     <TextView
         android:id="@+id/doctor"
+        android:padding="@dimen/sixteen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/w_sixteen"
@@ -62,6 +66,7 @@
 
     <TextView
         android:id="@+id/desc"
+        android:padding="@dimen/sixteen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/w_sixteen"
@@ -71,6 +76,7 @@
 
     <TextView
         android:id="@+id/updateTime"
+        android:padding="@dimen/sixteen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/w_sixteen"
