--- a/app/src/main/res/layout/activity_live_create.xml
+++ b/app/src/main/res/layout/activity_live_create.xml
@@ -6,6 +6,64 @@
 
     <include layout="@layout/toolbar" />
 
+    <LinearLayout
+        android:id="@+id/info_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/bg_avatar"
+            android:padding="1dp"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/code"
+        android:padding="@dimen/sixteen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left" />
+
+    <TextView
+        android:id="@+id/remark"
+        android:padding="@dimen/sixteen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="12dp"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left" />
+
+    <TextView
+        android:id="@+id/createTime"
+        android:padding="@dimen/sixteen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="12dp"
+        />
+
+    <TextView
+        android:id="@+id/doctor"
+        android:padding="@dimen/sixteen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/w_sixteen"
+        android:gravity="left"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="12dp" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -23,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/eight"
                 android:gravity="left|top"
-                android:hint="@string/coursera_summary"
+                android:hint="@string/coursera_summary1"
                 android:minLines="3"
                 android:textSize="@dimen/w_sixteen" />
 
@@ -32,7 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="@string/coursera_begin" />
+                android:text="@string/save_encounter" />
 
         </LinearLayout>
 
